next:

	* Optimize out unnecessary wrapper lambdas

	* Slightly better trap-error and error messages

0.8

	* Works with Shen 16.

	* Updated for chibi-scheme 0.7.

	* Fixes issue with functions that partially apply themselves.

	* Add optimized 'shen.pvar?' overwrite. Makes prolog and typechecking considerably faster.

	* Add a fast-path for the common case of trap-error

	* Shen sources are precompiled now instead of being compiled on the fly on startup, this provides better startup times.

0.7

	* Works with Shen 15.

0.6

	* Works with Shen 13.

	* Update the 'open' procedure.

	* Add 'write-byte' procedure.

	* Remove 'pr' procedure.

0.5

	* Works with Shen 9

	* Support for $native expressions.

0.4

	* Switched to curry-on-demand strategy for partial function applications. This
	improves performance considerably.

0.3

	* Improved performance and compatibility. Cleanup some dead code. Fixes

	* Overrides are now done after loading the file that defines that function. This
	improves load time and memory usage by using the improved versions when still
	loading Shen.

	* Added new overrides (macroexpand, shen-walk, hash, shen-digit-byte?,
	shen-byte->digit, symbol?, not, shen-segvar?, shen-grammar_symbol?.

	* Better '=' function, with fast-path for references that are 'eq?' and vector
	compare without converting vectors to lists first.

	* Removed safe symbol conversions, with a custom reader they are not needed.

	* A much improved method of symbol->function resolution which uses a hash table
	instead of `eval`.

	* Fix default fill value for absvectors (was 'fail!' when it should have been
	'shen-fail!')

	* Inline compares to '(fail)'.